--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "movemoveapp/laravel-dadata": "^1.0"
+        "movemoveapp/laravel-dadata": "^1.0",
+        "ext-mbstring": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
