--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+DADATA_TOKEN="1357cb75bfcc22fbc4dc4a5d26774ade50c4052f"
+DADATA_SECRET="97cf347ae30c25fa5755bbd21fbde155ee9eeed7"
+DADATA_TIMEOUT=10
